--- a/Changes
+++ b/Changes
@@ -2,6 +2,17 @@ Revision history for Perl module Crypt::RSA
 
 {{$NEXT}}
 
+0.52 -- Sat Jan 25 09:13:41 AST 2025
+
+    [Significant updates since 0.50]
+    - New Maintainer
+    - Fairly small release however 5c19404 fixed what is arguably a security issue
+    - as previous builds would load modules from unsafe locations (@atoomic)
+
+    [Change Log]
+    - 2f5688e Increment repo version
+    - 0e4a6b1 v0.51
+
 0.51 -- Fri Jan 24 22:41:00 AST 2025
 
     [Significant updates since 0.50]
